@@ -4,6 +4,7 @@ import com.shiftscheduler.backend.dto.ZipCodeDTO;
 import com.shiftscheduler.backend.model.Shift;
 import com.shiftscheduler.backend.model.User;
 import com.shiftscheduler.backend.model.ZipCode;
+import com.shiftscheduler.backend.model.Zone;
 import com.shiftscheduler.backend.repository.ShiftRepository;
 import com.shiftscheduler.backend.repository.UserRepository;
 import com.shiftscheduler.backend.repository.ZoneRepository;
@@ -15,7 +16,6 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/shifts")
@@ -40,7 +40,7 @@ public class ShiftController {
     // Display all shifts + form
     @GetMapping
     public String showShifts(Model model) {
-        model.addAttribute("shifts", shiftRepository.findAll());
+        model.addAttribute("shifts", shiftRepository.findAllByOrderByLastModifiedDesc());
         model.addAttribute("zones", zoneRepository.findAll());
         model.addAttribute("shiftForm", new Shift());
         return "shifts";
@@ -52,18 +52,55 @@ public class ShiftController {
         List<Shift> shifts = shiftRepository.findByUserId(userId);
         model.addAttribute("shiftForm", !shifts.isEmpty() ? shifts.get(0) : new Shift());
         model.addAttribute("zones", zoneRepository.findAll());
-        model.addAttribute("shifts", shiftRepository.findAll());
+        model.addAttribute("shifts", shiftRepository.findAllByOrderByLastModifiedDesc());
         return "shifts";
     }
 
     // Add or update shift
     @PostMapping("/save")
     public String saveOrUpdateShift(@ModelAttribute Shift shift) {
+        // Validate and set User
         Optional<User> userOpt = userRepository.findById(shift.getUser().getId());
-        if (userOpt.isPresent()) {
-            shift.setUser(userOpt.get());
+        if (!userOpt.isPresent()) {
+            return "redirect:/shifts?error=UserNotFound";
+        }
+        shift.setUser(userOpt.get());
+
+        // Validate and set Zone
+        Optional<Zone> zoneOpt = zoneRepository.findById(shift.getZone().getId());
+        if (!zoneOpt.isPresent()) {
+            return "redirect:/shifts?error=ZoneNotFound";
+        }
+        shift.setZone(zoneOpt.get());
+
+        // Validate and set ZipCode
+        Optional<ZipCode> zipCodeOpt = zipCodeRepository.findById(shift.getZipCode().getId());
+        if (!zipCodeOpt.isPresent()) {
+            return "redirect:/shifts?error=ZipCodeNotFound";
+        }
+        shift.setZipCode(zipCodeOpt.get());
+
+        // Update existing shift if id exists, otherwise create new
+        if (shift.getId() != null) {
+            Optional<Shift> existingShiftOpt = shiftRepository.findById(shift.getId());
+            if (existingShiftOpt.isPresent()) {
+                Shift existingShift = existingShiftOpt.get();
+                existingShift.setUser(shift.getUser());
+                existingShift.setZone(shift.getZone());
+                existingShift.setZipCode(shift.getZipCode());
+                existingShift.setStartDate(shift.getStartDate());
+                existingShift.setEndDate(shift.getEndDate());
+                shiftRepository.save(existingShift);
+            } else {
+                // If ID is provided but shift not found, treat as new shift
+                shift.setId(null);
+                shiftRepository.save(shift);
+            }
+        } else {
+            // New shift
             shiftRepository.save(shift);
         }
+
         return "redirect:/shifts";
     }
 
@@ -84,6 +121,6 @@ public class ShiftController {
         List<ZipCode> zipCodes = zipCodeRepository.findByZoneId(zoneId);
         return zipCodes.stream()
                 .map(zip -> new ZipCodeDTO(zip.getId(), zip.getCode()))
-                .collect(Collectors.toList());
+                .toList(); // Replaced .collect(Collectors.toList()) with .toList()
     }
 }
